# passport_validator

./: .gitignore  docker-compose.yml  pyproject.toml
front/: index.html
src/: loader.py  main.py  roaring.py
src/api/: routers.py
src/api/endpoints/: passport_check.py  site.py
src/core/: redis1.py  settings.py
src/models/: memory_db.py
src/schemas/: passport.py
