[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["atikhonov <aleksandrtikhonov91@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.92.0"
uvicorn = {extras = ["standart"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
