[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["atikhonov <aleksandrtikhonov91@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "src"}, {include="api", from='src'}]

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.92.0"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
httpx = "^0.23.3"
redis = "^4.5.1"
pyroaring = "^0.3.8"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run_server = "src.main:run_server"